--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -32,6 +32,28 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
+    - name: Cache dependencies
+      id: cache-python
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.cache/pip
+          ~/.local
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+            
+    - name: Save dependencies as tar
+      run: |
+        tar -czf dependencies.tar.gz ~/.cache/pip ~/.local
+
+    - name: Create artifact
+      # Upload dependencies as an artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: python-dependencies
+        path: dependencies.tar.gz
+
   unit_tests:
     runs-on: ubuntu-latest
     strategy:
@@ -41,7 +63,28 @@ jobs:
     needs: build
 
     steps:
+    - name: Download dependencies
+      uses: actions/download-artifact@v3
+      with:
+        name: python-dependencies
+        path: ./dependencies
+
+    - name: Extract dependencies
+      run: |
+        tar -xzf ./dependencies/python-dependencies.tar.gz -C ~
+
+    - name: Set up Python
+      uses: actions/setup-python@v3
+      with:
+        python-version: '3.x'
+      
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        
     - name: Test with pytest
+      
       run: |
         pytest -vv
 
