--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -61,7 +61,7 @@ jobs:
       run: |
         coverage run --source src.pkg --module pytest --verbose tests && coverage report --show-missing
 
-    # - name: Upload coverage reports to Codecov
-    #   uses: codecov/codecov-action@e0b68c6749509c5f83f984dd99a76a1c1a231044 #v4.0.1
-    #   with:
-    #     token: ${{ secrets.CODECOV_TOKEN }}
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@e0b68c6749509c5f83f984dd99a76a1c1a231044 #v4.0.1
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
